# Milon

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_BOOTSTRAP.md  README.md  package-lock.json  package.json
.claude/: launch.json
client/: next.config.ts  package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/coach/: page.tsx
client/app/einstellungen/: page.tsx
client/app/ernaehrung/: page.tsx
client/app/fortschritt/: page.tsx
client/app/gesundheit/: page.tsx
client/app/koerper/: page.tsx
client/app/kraft/: page.tsx
client/app/laufen/: page.tsx
client/components/: CoachThinking.tsx  EntryEditor.tsx  Heatmap.tsx  Markdown.tsx  PhotoPicker.tsx  Shell.tsx  charts.tsx  ui.tsx
client/lib/: api.ts  format.ts  quips.ts
design/: README.md  app.js  assets-graphics.json  assets-klar-sport.json  assets-magenta-chroma.json  assets.json  coach-animations.html  index.html  klar-klinisch.html  serve.py  silhouette.html  styles.css  themes.js
design/tools/: key-magenta.mjs  key-silhouette.mjs
server/: .env.example  pyproject.toml
server/app/: config.py  db.py  main.py  models.py
server/app/api/: coach.py  ingest.py  metrics.py  progress.py  settings.py
server/app/coach/: client.py  prompts.py  snapshot.py  tools.py
server/app/ingest/: drive.py  fddb.py  health_connect.py  hevy.py
server/app/mcp/: claude_desktop_config.example.json  server.py
server/app/metrics/: activity.py  body.py  health.py  nutrition.py  running.py  strength.py
server/app/sync/: scheduler.py
(+19 files in other folders)
